feat(product): Enhance product management with new exception handling, image deletion, and immutable DTOs